# bazel_projects

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
projects/hash_images/: BUILD.bazel  aws_helper.go  hash_images_test.go
projects/image_downscale/: BUILD.bazel  go.mod  main.go
projects/image_processing/: BUILD.bazel  aws_helper.go  go.mod  go.sum  image_processor.go  image_processor_test.go  main.go
projects/load_testing/: BUILD.bazel  go.mod  go.sum  main.go
projects/load_testing/proto/: BUILD.bazel  myproto.pb.go  myproto.proto
