load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "hash_images",
    srcs = ["hash_images.go"],
    importpath = "projects/hash_images",
    visibility = ["//visibility:public"],
)

go_test(
    name = "hash_images_test",
    srcs = [ "hash_images_test.go" ],
    embed = [ ":hash_images" ],
    data = glob(["images/**"])
)

go_binary(
    name = "hash_images_bin",
    srcs = ["hash_images.go"],
    data = glob(["images/**"])
)

