load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = [
        "aws_helper.go",
        "image_processor.go",
        "main.go",
    ],
    data = glob(["images/**"]),
    importpath = "projects/image_processing",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/awserr",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager",
        "@com_github_aws_aws_sdk_go//service/sts",
    ],
)

go_binary(
    name = "image_processing",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib_test",
    srcs = ["image_processor_test.go"],
    embed = [":lib"],
)
