load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
# gazelle:go_visibility //visibility:public
package(default_visibility = ["//visibility:public"])

go_library(
    name = "lib",
    srcs = [
        "aws_helper.go",
        "image_processor.go",
        "main.go",
    ],
    data = glob(["images/**"]),
    importpath = "projects/image_processing",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_config//:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:go_default_library",
    ],
)

go_binary(
    name = "image_processing",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib_test",
    srcs = ["image_processor_test.go"],
    embed = [":lib"],
)
