load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "projects/load_testing",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_lib_pq//:pq",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "load_testing",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)
