load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "myproto_proto",
    srcs = ["myproto.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "myproto_go_proto",
    importpath = "/proto",
    proto = ":myproto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":myproto_go_proto"],
    importpath = "/proto",
    visibility = ["//visibility:public"],
)
